apps/authentik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: server
          image: ghcr.io/goauthentik/server:2026.2
          args: ["server"]
          ports:
            - name: http
              containerPort: 9000
            - name: https
              containerPort: 9443
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"

        - name: worker
          image: ghcr.io/goauthentik/server:2026.2
          args: ["worker"]
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
