apps/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
    - name: https
      port: 443
      targetPort: 9443
  selector:
    app: authentik
